# u-doe

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: coding.rs  error.rs  lib.rs  power.rs  wasm.rs
src/analysis/: anova.rs  effects.rs  mod.rs  rsm.rs  taguchi_sn.rs
src/design/: box_behnken.rs  ccd.rs  dsd.rs  factorial.rs  mixture.rs  mod.rs  plackett_burman.rs  taguchi.rs
src/optimization/: desirability.rs  mod.rs
tests/: integration.rs
