[package]
name = "u-doe"
version = "0.2.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
description = "Design of Experiments (DOE) framework: factorial, Plackett-Burman, CCD, Box-Behnken, Taguchi, effects analysis, RSM, and desirability optimization."
repository = "https://github.com/iyulab/u-doe"
keywords = ["doe", "design-of-experiments", "rsm", "factorial", "statistics"]
categories = ["science", "mathematics"]
readme = "README.md"

[dependencies]
u-numflow = { version = "0.2", path = "../../foundation/u-numflow" }
u-analytics = { version = "0.1", path = "../../algorithms/u-analytics" }

[dev-dependencies]
proptest = "1.4"
