[package]
name = "u-doe"
version = "0.3.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
description = "Design of Experiments (DOE) framework: factorial, Plackett-Burman, CCD, Box-Behnken, Taguchi, effects analysis, RSM, and desirability optimization."
repository = "https://github.com/iyulab/u-doe"
keywords = ["doe", "design-of-experiments", "rsm", "factorial", "statistics"]
categories = ["science", "mathematics"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:serde"]

[dependencies]
u-numflow = { version = "0.2", path = "../../foundation/u-numflow" }
u-analytics = { version = "0.1", path = "../../algorithms/u-analytics" }
serde = { version = "1", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
proptest = "1.4"
